# hdf5-wave-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hdf5_wave_viewer/: __init__.py  app.py  downsample.py  io.py  viewer.py
