[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hdf5-wave-viewer"
version = "0.1.1"
description = "A lightweight HDF5 time-series viewer for large 1D datasets"
requires-python = ">=3.10"
authors = [
  { name = "Takaki AKIBA" }
]
dependencies = [
  "numpy>=1.23",
  "h5py>=3.8",
  "pyqtgraph>=0.13",
  "PySide6>=6.5",
]
license = "MIT"

[project.scripts]
hdf5-wave-viewer = "hdf5_wave_viewer.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hdf5_wave_viewer"]
